--- a/Aula12/Aula12/ex014/estilo.css
+++ b/Aula12/Aula12/ex014/estilo.css
@@ -15,16 +15,15 @@ section {
     width: 500px;
     margin: auto;
     box-shadow: 5px 5px 10px rgba(54, 49, 49, 0.637);
+}
 
+div {
+    text-align: center ;
+    padding: 10px;
 }
 
 footer {
     color: white;
     text-align: center;
     font-style: italic;
-}
-
-img {
-    width: 400px;
-    margin-left: 05px;
 }
